<resources>
    <!-- Main Activity -->
    <string name="app_name">Home Cookin Recipes</string>
    <string name="search_hint">Search recipes</string>
    <string name="action_search">Search</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="no_result_found">No result found.</string>

    <!-- Detail Activity -->
    <string name="title_activity_detail">DetailActivity</string>
    <string name="action_share">Share</string>
    <string name="action_fav">Bookmark</string>
    <string name="internet_connection_message">Please check internet connection.</string>
    <string name="add_to_fav">Recipe added to favorites.</string>
    <string name="remove_from_fav">Recipe removed from favorites.</string>

    <!-- Spinner -->
    <string name="title_activity_spinner">What would you like to cook?</string>
    <string name="title_activity_spin_result">May we suggest&#8230;</string>
    <string name="spin_again_label">Spin Again</string>
    <string name="view_recipe_label">View This Recipe</string>
    <string name="beef_label">Beef</string>
    <string name="vegetarian_label">Vegetarian</string>
    <string name="soup_label">Soups</string>
    <string name="fish_label">Fish</string>
    <string name="dessert_label">Desserts</string>
    <string name="chicken_label">Chicken</string>
    <string name="bread_label">Breads</string>
    <string name="cake_label">Cakes</string>
    <string name="appetizer_label">Appetizers</string>
    <string name="pasta_label">Pasta</string>
    <string name="any_label">Any</string>
    <string name="pizza_label">Pizza</string>
    <string name="pork_label">Pork</string>

    <!--Content Description-->
    <string name="menu">Menu</string>
    <string name="toolbar">Tool Bar</string>
    <string name="appbar">App bar</string>
    <string name="progressbar">Progress bar</string>
    <string name="webview">Web View</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="recipe_publisher">Recipe Publisher</string>
    <string name="recipe_rating">Recipe Rating</string>
    <string name="view_recipe">View Recipe</string>
    <string name="spin_recipe">Spin Recipe</string>
    <string name="ad">Ad</string>
    <string name="logo">Logo</string>

    <!-- Other (ad_id, widget, etc) -->
    <string name="main_banner_ad_unit_id">ca-app-pub-7370263933129544/9368152715</string>
    <string name="spin_banner_ad_unit_id">ca-app-pub-7370263933129544/9228551917</string>
    <string name="title_widget">Today\'s Special</string>
    <string name="text_place_holder">--</string>
    <string name="trending">Trending</string>
    <string name="top_rated">Top Rated</string>
    <string name="favorites">Favorites</string>
    <string name="recipe_spinner">Recipe Spinner</string>
    <string name="recommended">Recommended</string>
</resources>
