<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.homecookinrecipes.ui.SpinnerActivity">

        <Button
            android:id="@+id/btn_beef"
            android:layout_width="@dimen/spinner_text_width"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spinner_button_margin"
            android:layout_marginRight="@dimen/spinner_button_margin"
            android:layout_marginStart="@dimen/spinner_button_margin"
            android:layout_marginEnd="@dimen/spinner_button_margin"
            android:layout_marginTop="@dimen/spinner_button_margin"
            android:background="@color/deepGold"
            android:onClick="getRecipe"
            android:text="@string/beef_label"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_appetizer" />

        <Button
            android:id="@+id/btn_vege"
            android:layout_width="@dimen/spinner_text_width"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spinner_button_margin"
            android:layout_marginRight="@dimen/spinner_button_margin"
            android:layout_marginStart="@dimen/spinner_button_margin"
            android:layout_marginEnd="@dimen/spinner_button_margin"
            android:layout_marginTop="@dimen/spinner_button_margin"
            android:background="@color/brightGreen"
            android:onClick="getRecipe"
            android:text="@string/vegetarian_label"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_soup" />

        <Button
            android:id="@+id/btn_soup"
            android:layout_width="@dimen/spinner_text_width"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spinner_button_margin"
            android:layout_marginRight="@dimen/spinner_button_margin"
            android:layout_marginStart="@dimen/spinner_button_margin"
            android:layout_marginEnd="@dimen/spinner_button_margin"
            android:layout_marginTop="@dimen/spinner_button_margin"
            android:background="@color/lightGreen"
            android:onClick="getRecipe"
            android:text="@string/soup_label"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_pork" />

        <Button
            android:id="@+id/btn_fish"
            android:layout_width="@dimen/spinner_text_width"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spinner_button_margin"
            android:layout_marginRight="@dimen/spinner_button_margin"
            android:layout_marginStart="@dimen/spinner_button_margin"
            android:layout_marginEnd="@dimen/spinner_button_margin"
            android:layout_marginTop="@dimen/spinner_button_margin"
            android:background="@color/lightGreen"
            android:onClick="getRecipe"
            android:text="@string/fish_label"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_desserts" />

        <Button
            android:id="@+id/btn_desserts"
            android:layout_width="@dimen/spinner_text_width"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spinner_button_margin"
            android:layout_marginRight="@dimen/spinner_button_margin"
            android:layout_marginStart="@dimen/spinner_button_margin"
            android:layout_marginEnd="@dimen/spinner_button_margin"
            android:layout_marginTop="@dimen/spinner_button_margin"
            android:background="@color/deepGold"
            android:onClick="getRecipe"
            android:text="@string/dessert_label"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_chicken" />

        <Button
            android:id="@+id/btn_chicken"
            android:layout_width="@dimen/spinner_text_width"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spinner_button_margin"
            android:layout_marginRight="@dimen/spinner_button_margin"
            android:layout_marginStart="@dimen/spinner_button_margin"
            android:layout_marginEnd="@dimen/spinner_button_margin"
            android:layout_marginTop="@dimen/spinner_button_margin"
            android:background="@color/lightRed"
            android:onClick="getRecipe"
            android:text="@string/chicken_label"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_cake" />

        <Button
            android:id="@+id/btn_bread"
            android:layout_width="@dimen/spinner_text_width"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spinner_button_margin"
            android:layout_marginRight="@dimen/spinner_button_margin"
            android:layout_marginStart="@dimen/spinner_button_margin"
            android:layout_marginEnd="@dimen/spinner_button_margin"
            android:layout_marginTop="@dimen/spinner_button_margin"
            android:background="@color/lightGreen"
            android:onClick="getRecipe"
            android:text="@string/bread_label"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_beef" />

        <Button
            android:id="@+id/btn_cake"
            android:layout_width="@dimen/spinner_text_width"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spinner_button_margin"
            android:layout_marginRight="@dimen/spinner_button_margin"
            android:layout_marginStart="@dimen/spinner_button_margin"
            android:layout_marginEnd="@dimen/spinner_button_margin"
            android:layout_marginTop="@dimen/spinner_button_margin"
            android:background="@color/brightGreen"
            android:onClick="getRecipe"
            android:text="@string/cake_label"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_bread" />

        <Button
            android:id="@+id/btn_appetizer"
            android:layout_width="@dimen/spinner_text_width"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spinner_button_margin"
            android:layout_marginRight="@dimen/spinner_button_margin"
            android:layout_marginStart="@dimen/spinner_button_margin"
            android:layout_marginEnd="@dimen/spinner_button_margin"
            android:layout_marginTop="8dp"
            android:background="@color/lightRed"
            android:onClick="getRecipe"
            android:text="@string/appetizer_label"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_pasta"
            android:layout_width="@dimen/spinner_text_width"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spinner_button_margin"
            android:layout_marginRight="@dimen/spinner_button_margin"
            android:layout_marginStart="@dimen/spinner_button_margin"
            android:layout_marginEnd="@dimen/spinner_button_margin"
            android:layout_marginTop="8dp"
            android:background="@color/brightGreen"
            android:onClick="getRecipe"
            android:text="@string/pasta_label"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_fish" />

        <Button
            android:id="@+id/btn_any"
            android:layout_width="@dimen/spinner_text_width"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spinner_button_margin"
            android:layout_marginLeft="@dimen/spinner_button_margin"
            android:layout_marginRight="@dimen/spinner_button_margin"
            android:layout_marginStart="@dimen/spinner_button_margin"
            android:layout_marginEnd="@dimen/spinner_button_margin"
            android:layout_marginTop="8dp"
            android:background="@color/lightRed"
            android:onClick="getRecipe"
            android:text="@string/any_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_vege"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btn_pizza"
            android:layout_width="@dimen/spinner_text_width"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spinner_button_margin"
            android:layout_marginRight="@dimen/spinner_button_margin"
            android:layout_marginStart="@dimen/spinner_button_margin"
            android:layout_marginEnd="@dimen/spinner_button_margin"
            android:layout_marginTop="@dimen/spinner_button_margin"
            android:background="@color/lightRed"
            android:onClick="getRecipe"
            android:text="@string/pizza_label"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_pasta" />

        <Button
            android:id="@+id/btn_pork"
            android:layout_width="@dimen/spinner_text_width"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spinner_button_margin"
            android:layout_marginRight="@dimen/spinner_button_margin"
            android:layout_marginStart="@dimen/spinner_button_margin"
            android:layout_marginEnd="@dimen/spinner_button_margin"
            android:layout_marginTop="@dimen/spinner_button_margin"
            android:background="@color/deepGold"
            android:onClick="getRecipe"
            android:text="@string/pork_label"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_pizza" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>
